--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -330,9 +330,9 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>767 89 445 77 0 0 1280 777 </string>
+	<string>614 163 445 77 0 0 1280 777 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>91 212 924 485 0 0 1280 800 </string>
+	<string>91 212 924 485 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
 	<string>0 101 650 676 0 0 1280 800 </string>
 	<key>NeverWarnAboutMeta</key>
@@ -1065,10 +1065,12 @@
 			<string>/Users/burdiyan</string>
 		</dict>
 	</array>
+	<key>NoSyncHaveShownPromoWithId_4</key>
+	<true/>
 	<key>NoSyncTimeOfLastPromo</key>
-	<real>457876382.26089001</real>
+	<real>477586526.78947502</real>
 	<key>NoSyncTimeOfLastPromoDownload</key>
-	<real>470744206.07625502</real>
+	<real>483557075.43916398</real>
 	<key>OnlyWhenMoreTabs</key>
 	<true/>
 	<key>OpenArrangementAtStartup</key>
@@ -1133,7 +1135,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-12-02T10:16:24Z</date>
+	<date>2016-04-28T13:58:15Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -1169,11 +1171,15 @@
 	<key>WebKitStandardFont</key>
 	<string>.Helvetica Neue DeskInterface</string>
 	<key>WindowNumber</key>
-	<true/>
+	<false/>
 	<key>WindowStyle</key>
 	<integer>0</integer>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
+	<key>findIgnoreCase_iTerm</key>
+	<true/>
+	<key>findRegex_iTerm</key>
+	<false/>
 	<key>iTerm Version</key>
 	<string>2.1.4</string>
 </dict>
