--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -344,15 +344,15 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>1150 960 445 331 -227 900 1920 1057 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
-	<string>410 378 620 392 0 0 1440 877 </string>
+	<string>423 1398 620 392 -227 900 1920 1057 </string>
 	<key>NSWindow Frame SessionsPreferences</key>
 	<string>269 129 606 469 0 0 1440 877 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>555 1323 796 473 -227 900 1920 1057 </string>
+	<string>742 1507 796 473 -227 900 1920 1080 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>276 1078 1170 701 -227 900 1920 1057 </string>
+	<string>-227 900 1920 1080 -227 900 1920 1057 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>-227 1405 650 552 -227 900 1920 1057 </string>
+	<string>-227 1405 650 552 -227 900 1920 1080 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
 	<string>-227 900 1920 1080 -227 900 1920 1057 </string>
 	<key>NeverWarnAboutMeta</key>
@@ -1230,7 +1230,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-10-17T08:28:46Z</date>
+	<date>2017-10-27T08:03:05Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SavePasteHistory</key>
@@ -1238,7 +1238,7 @@
 	<key>ShowBookmarkName</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
-	<true/>
+	<false/>
 	<key>ShowPaneTitles</key>
 	<true/>
 	<key>SmartPlacement</key>
